--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <!-- BlurtJS Library -->
         <script src="https://cdn.jsdelivr.net/npm/@blurtfoundation/blurtjs@latest/dist/blurt.min.js"></script>
         <script src="https://unpkg.com/@beblurt/dblurt@latest/dist/dblurt.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.3.8/dist/purify.min.js"></script>
         <!-- EasyMDE Markdown Editor -->
         <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
         <!-- Your App Logic -->
